fix: fix the dark mode style for nav-tabs (button on the Planning phase)

--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -21951,7 +21951,6 @@ hr.horizontal.gray-light {
 }
 .navbar-vertical .navbar-nav > .nav-item .nav-link.active {
   color: #344767;
-  background-color: rgba(255, 255, 255, 0.13);
 }
 
 .navbar-main {
